clusternetworkpolicy-for-logging/logging-forwarder-cnp.yml
apiVersion: security.antrea.tanzu.vmware.com/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: logging-forwarder
spec:
    priority: 100
    tier: Platform   
    appliedTo:
      - podSelector:
          matchLabels:
            logging: forwarder
    egress:
      - action: Allow
        to:
          - podSelector:
              matchLabels:
                logging: collector
        ports:
          - protocol: TCP
            port: syslog
